syntax = "proto3";
option java_multiple_files = true;
option java_package = "io.homo.demo.proto";     // 指定包名
option java_outer_classname = "RpcServerTest"; // 指定类名

message HttpServerRequestPb {
  string param = 1;
}

message HttpServerResponsePb {
  int32 code = 1;
}